# pe_bliss2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common.props  pe_bliss2.sln
buffers/: CMakeLists.txt  buffer_copy.cpp  buffer_copy.h  buffer_interface.h  buffers.vcxproj  buffers.vcxproj.filters  fixed_output_memory_buffer.cpp  fixed_output_memory_buffer.h  input_buffer_interface.h  input_buffer_section.cpp  input_buffer_section.h  input_buffer_state.cpp  input_buffer_state.h  input_buffer_stateful_wrapper.cpp  input_buffer_stateful_wrapper.h  input_container_buffer.cpp  input_container_buffer.h  input_memory_buffer.cpp  input_memory_buffer.h  input_stream_buffer.cpp  input_stream_buffer.h  input_virtual_buffer.h  output_buffer_interface.h  output_memory_buffer.cpp  output_memory_buffer.h  output_memory_ref_buffer.cpp  output_memory_ref_buffer.h  output_stream_buffer.cpp  output_stream_buffer.h  ref_buffer.cpp  ref_buffer.h
buffers/src/: buffer_copy.cpp  input_buffer_section.cpp  input_buffer_stateful_wrapper.cpp  input_container_buffer.cpp  input_memory_buffer.cpp  input_stream_buffer.cpp  input_virtual_buffer.cpp  output_memory_buffer.cpp  output_memory_ref_buffer.cpp  ref_buffer.cpp
console_dumper/: CMakeLists.txt  bound_imports_dumper.cpp  bound_imports_dumper.h  color_provider.h  console_dumper.vcxproj  console_dumper.vcxproj.filters  debug_dumper.cpp  debug_dumper.h  dos_header_dumper.cpp  dos_header_dumper.h  dos_stub_dumper.cpp  dos_stub_dumper.h  exceptions_dumper.cpp  exceptions_dumper.h  exports_dumper.cpp  exports_dumper.h  file_header_dumper.cpp  file_header_dumper.h  file_signature_dumper.cpp  file_signature_dumper.h  formatter.h  image_factory.cpp  image_factory.h  imports_dumper.cpp  imports_dumper.h  load_config_dumper.cpp  load_config_dumper.h  main.cpp  optional_header_dumper.cpp  optional_header_dumper.h  relocations_dumper.cpp  relocations_dumper.h  resources_dumper.cpp  resources_dumper.h  rich_data_dumper.cpp  rich_data_dumper.h  section_table_dumper.cpp  section_table_dumper.h  tls_dumper.cpp  tls_dumper.h
pe_bliss2/: CMakeLists.txt  address_converter.cpp  address_converter.h  bit_stream.h  compid_database.cpp  compid_database.h  data_directories.cpp  data_directories.h  dos_header.cpp  dos_header.h  dos_stub.cpp  dos_stub.h  error_list.cpp  error_list.h  file_header.cpp  file_header.h  image.cpp  image.h  image_builder.cpp  image_builder.h  image_loader.cpp  image_loader.h  image_signature.cpp  image_signature.h  optional_header.cpp  optional_header.h  overlay.h  packed_byte_array.cpp  packed_byte_array.h  packed_byte_vector.cpp  packed_byte_vector.h  packed_c_string.cpp  packed_c_string.h  packed_string_type.h  packed_struct.h  packed_utf16_string.cpp  packed_utf16_string.h  pe_bliss2.vcxproj  pe_bliss2.vcxproj.filters  pe_error.h  (+13 more)
pe_bliss2/bound_import/: bound_import_directory_builder.cpp  bound_import_directory_builder.h  bound_import_directory_loader.cpp  bound_import_directory_loader.h  bound_library.h
pe_bliss2/core/: data_directories.cpp  data_directories.h  file_header.cpp  file_header.h  image_signature.cpp  image_signature.h  image_signature_errc.h  image_signature_validator.cpp  image_signature_validator.h  optional_header.cpp  optional_header.h  optional_header_errc.cpp  optional_header_errc.h  optional_header_validator.cpp  optional_header_validator.h  overlay.cpp  overlay.h
pe_bliss2/debug/: debug_directory.cpp  debug_directory.h  debug_directory_loader.cpp  debug_directory_loader.h
pe_bliss2/delay_import/: delay_import_directory_loader.h
pe_bliss2/detail/: bit_stream.h  concepts.h  error_list.h  image_data_directory.h  image_dos_header.h  image_file_header.h  image_optional_header.h  image_section_header.h  packed_buffer_serialization.h  packed_byte_array.cpp  packed_byte_array.h  packed_byte_vector.cpp  packed_byte_vector.h  packed_c_string.cpp  packed_c_string.h  packed_reflection.h  packed_serialization.h  packed_struct.h  packed_struct_base.h
pe_bliss2/dos/: dos_header.cpp  dos_header.h  dos_header_errc.cpp  dos_header_errc.h  dos_header_validator.cpp  dos_header_validator.h  dos_stub.cpp  dos_stub.h
pe_bliss2/dotnet/: dotnet_directory.cpp  dotnet_directory.h  dotnet_directory_loader.cpp  dotnet_directory_loader.h
pe_bliss2/exceptions/: exception_directory.h  exception_directory_loader.cpp  exception_directory_loader.h
pe_bliss2/exports/: export_directory.cpp  export_directory.h  export_directory_builder.cpp  export_directory_builder.h  export_directory_loader.cpp  export_directory_loader.h  exported_address.cpp  exported_address.h
pe_bliss2/image/: buffer_to_va.cpp  buffer_to_va.h  byte_array_from_va.h  byte_vector_from_va.cpp  byte_vector_from_va.h  bytes_to_va.h  checksum.cpp  format_detector.cpp  image.cpp  image.h  image_builder.cpp  image_builder.h  image_errc.cpp  image_errc.h  image_loader.cpp  image_loader.h  image_section_search.cpp  image_section_search.h  rva_file_offset_converter.cpp  rva_file_offset_converter.h  section_data_from_va.cpp  section_data_from_va.h  section_data_length_from_va.cpp  section_data_length_from_va.h  shannon_entropy.cpp  shannon_entropy.h  string_from_va.cpp  string_to_va.cpp  string_to_va.h  struct_from_va.h  struct_to_va.h
pe_bliss2/imports/: import_directory.h  import_directory_builder.cpp  import_directory_builder.h  import_directory_loader.cpp  import_directory_loader.h  imported_address.h
pe_bliss2/load_config/: load_config_directory.cpp  load_config_directory.h  load_config_directory_loader.cpp  load_config_directory_loader.h
pe_bliss2/relocations/: base_relocation.h  image_rebase.cpp  image_rebase.h  relocation_directory_builder.cpp  relocation_directory_builder.h  relocation_directory_loader.cpp  relocation_directory_loader.h  relocation_entry.cpp  relocation_entry.h
tests/: CMakeLists.txt  tests.vcxproj  tests.vcxproj.filters
utilities/: CMakeLists.txt  generic_error.cpp  generic_error.h  hash.h  math.h  safe_uint.h  scoped_guard.h  shannon_entropy.cpp  static_class.h  string.h  utilities.vcxproj  utilities.vcxproj.filters  variant_helpers.h
(+503 files in other folders)
