cmake_minimum_required(VERSION 3.15)

project(pe_bliss2
	VERSION 1.0.0.0
	LANGUAGES CXX)

find_package(Boost 1.78 REQUIRED)

include(../cmake/library_options.cmake)

add_library(pe_bliss2 ${PE_BLISS2_BUILD_TYPE})

include(../cmake/output_options.cmake)
set_output_dirs(pe_bliss2)
set_msvc_runtime_library(pe_bliss2 "${PE_BLISS_MSVC_RUNTIME_LIBRARY}")

target_include_directories(pe_bliss2
	PUBLIC include "${Boost_INCLUDE_DIRS}")

target_compile_features(pe_bliss2 PRIVATE cxx_std_20)

target_sources(pe_bliss2
	PUBLIC
		include/pe_bliss2/address_converter.h
		include/pe_bliss2/bit_stream.h
		include/pe_bliss2/error_list.h
		include/pe_bliss2/packed_byte_array.h
		include/pe_bliss2/packed_byte_vector.h
		include/pe_bliss2/packed_c_string.h
		include/pe_bliss2/packed_string_type.h
		include/pe_bliss2/packed_struct.h
		include/pe_bliss2/packed_utf16_string.h
		include/pe_bliss2/pe_error.h
		include/pe_bliss2/pe_types.h
		include/pe_bliss2/bound_import/bound_import_directory_builder.h
		include/pe_bliss2/bound_import/bound_import_directory_loader.h
		include/pe_bliss2/bound_import/bound_library.h
		include/pe_bliss2/core/data_directories.h
		include/pe_bliss2/core/file_header.h
		include/pe_bliss2/core/image_signature.h
		include/pe_bliss2/core/image_signature_errc.h
		include/pe_bliss2/core/image_signature_validator.h
		include/pe_bliss2/core/optional_header.h
		include/pe_bliss2/core/optional_header_errc.h
		include/pe_bliss2/core/optional_header_validator.h
		include/pe_bliss2/core/overlay.h
		include/pe_bliss2/debug/debug_directory.h
		include/pe_bliss2/debug/debug_directory_loader.h
		include/pe_bliss2/delay_import/delay_import_directory.h
		include/pe_bliss2/delay_import/delay_import_directory_loader.h
		include/pe_bliss2/detail/concepts.h
		include/pe_bliss2/detail/endian_convert.h
		include/pe_bliss2/detail/image_data_directory.h
		include/pe_bliss2/detail/image_dos_header.h
		include/pe_bliss2/detail/image_file_header.h
		include/pe_bliss2/detail/image_optional_header.h
		include/pe_bliss2/detail/image_section_header.h
		include/pe_bliss2/detail/packed_buffer_serialization.h
		include/pe_bliss2/detail/packed_reflection.h
		include/pe_bliss2/detail/packed_serialization.h
		include/pe_bliss2/detail/packed_struct_base.h
		include/pe_bliss2/detail/bound_import/image_bound_import_descriptor.h
		include/pe_bliss2/detail/debug/image_debug_directory.h
		include/pe_bliss2/detail/delay_import/image_delay_load_descriptor.h
		include/pe_bliss2/detail/dotnet/image_dotnet_directory.h
		include/pe_bliss2/detail/exceptions/image_runtime_function_entry.h
		include/pe_bliss2/detail/exports/image_export_directory.h
		include/pe_bliss2/detail/image/image-inl.h
		include/pe_bliss2/detail/imports/image_import_descriptor.h
		include/pe_bliss2/detail/load_config/image_load_config_directory.h
		include/pe_bliss2/detail/load_config/load_config_directory-inl.h
		include/pe_bliss2/detail/relocations/image_base_relocation.h
		include/pe_bliss2/detail/resources/accelerator.h
		include/pe_bliss2/detail/resources/bitmap.h
		include/pe_bliss2/detail/resources/icon_cursor.h
		include/pe_bliss2/detail/resources/image_resource_directory.h
		include/pe_bliss2/detail/resources/message_table.h
		include/pe_bliss2/detail/resources/version_info.h
		include/pe_bliss2/detail/rich/rich_header_utils.h
		include/pe_bliss2/detail/security/image_security_directory.h
		include/pe_bliss2/detail/tls/image_tls_directory.h
		include/pe_bliss2/dos/dos_header.h
		include/pe_bliss2/dos/dos_header_errc.h
		include/pe_bliss2/dos/dos_header_validator.h
		include/pe_bliss2/dos/dos_stub.h
		include/pe_bliss2/dotnet/dotnet_directory.h
		include/pe_bliss2/dotnet/dotnet_directory_loader.h
		include/pe_bliss2/exceptions/exception_directory.h
		include/pe_bliss2/exceptions/exception_directory_loader.h
		include/pe_bliss2/exceptions/arm/arm_exception_directory.h
		include/pe_bliss2/exceptions/arm/arm_exception_directory_loader.h
		include/pe_bliss2/exceptions/arm64/arm64_exception_directory.h
		include/pe_bliss2/exceptions/arm64/arm64_exception_directory_loader.h
		include/pe_bliss2/exceptions/arm_common/arm_common_exception_directory_loader.h
		include/pe_bliss2/exceptions/arm_common/arm_common_unwind_info-inl.h
		include/pe_bliss2/exceptions/arm_common/arm_common_unwind_info.h
		include/pe_bliss2/exceptions/x64/x64_exception_directory-inl.h
		include/pe_bliss2/exceptions/x64/x64_exception_directory.h
		include/pe_bliss2/exceptions/x64/x64_exception_directory_loader.h
		include/pe_bliss2/exports/exported_address.h
		include/pe_bliss2/exports/export_directory.h
		include/pe_bliss2/exports/export_directory_builder.h
		include/pe_bliss2/exports/export_directory_loader.h
		include/pe_bliss2/image/buffer_to_va.h
		include/pe_bliss2/image/bytes_to_va.h
		include/pe_bliss2/image/byte_array_from_va.h
		include/pe_bliss2/image/byte_vector_from_va.h
		include/pe_bliss2/image/checksum.h
		include/pe_bliss2/image/format_detector.h
		include/pe_bliss2/image/image.h
		include/pe_bliss2/image/image_builder.h
		include/pe_bliss2/image/image_errc.h
		include/pe_bliss2/image/image_loader.h
		include/pe_bliss2/image/image_section_search.h
		include/pe_bliss2/image/rva_file_offset_converter.h
		include/pe_bliss2/image/section_data_from_va.h
		include/pe_bliss2/image/section_data_length_from_va.h
		include/pe_bliss2/image/shannon_entropy.h
		include/pe_bliss2/image/string_from_va.h
		include/pe_bliss2/image/string_to_va.h
		include/pe_bliss2/image/struct_from_va.h
		include/pe_bliss2/image/struct_to_va.h
		include/pe_bliss2/imports/imported_address.h
		include/pe_bliss2/imports/import_directory.h
		include/pe_bliss2/imports/import_directory_builder.h
		include/pe_bliss2/imports/import_directory_loader.h
		include/pe_bliss2/load_config/load_config_directory.h
		include/pe_bliss2/load_config/load_config_directory_loader.h
		include/pe_bliss2/relocations/base_relocation.h
		include/pe_bliss2/relocations/image_rebase.h
		include/pe_bliss2/relocations/relocation_directory_builder.h
		include/pe_bliss2/relocations/relocation_directory_loader.h
		include/pe_bliss2/relocations/relocation_entry.h
		include/pe_bliss2/resources/accelerator_table.h
		include/pe_bliss2/resources/accelerator_table_reader.h
		include/pe_bliss2/resources/bitmap.h
		include/pe_bliss2/resources/bitmap_reader.h
		include/pe_bliss2/resources/bitmap_writer.h
		include/pe_bliss2/resources/cpid.h
		include/pe_bliss2/resources/guid.h
		include/pe_bliss2/resources/icon_cursor.h
		include/pe_bliss2/resources/icon_cursor_reader.h
		include/pe_bliss2/resources/icon_cursor_writer.h
		include/pe_bliss2/resources/lcid.h
		include/pe_bliss2/resources/manifest-inl.h
		include/pe_bliss2/resources/manifest.h
		include/pe_bliss2/resources/manifest_accessor_interface.h
		include/pe_bliss2/resources/message_table.h
		include/pe_bliss2/resources/message_table_reader.h
		include/pe_bliss2/resources/pugixml_manifest_accessor.h
		include/pe_bliss2/resources/resource_directory.h
		include/pe_bliss2/resources/resource_directory_loader.h
		include/pe_bliss2/resources/resource_reader.h
		include/pe_bliss2/resources/resource_reader_errc.h
		include/pe_bliss2/resources/resource_types.h
		include/pe_bliss2/resources/resource_writer.h
		include/pe_bliss2/resources/string_table.h
		include/pe_bliss2/resources/string_table_reader.h
		include/pe_bliss2/resources/string_table_writer.h
		include/pe_bliss2/resources/version.h
		include/pe_bliss2/resources/version_info.h
		include/pe_bliss2/resources/version_info_block.h
		include/pe_bliss2/resources/version_info_reader.h
		include/pe_bliss2/rich/compid_database.h
		include/pe_bliss2/rich/rich_compid.h
		include/pe_bliss2/rich/rich_header.h
		include/pe_bliss2/rich/rich_header_builder.h
		include/pe_bliss2/rich/rich_header_loader.h
		include/pe_bliss2/section/section_data.h
		include/pe_bliss2/section/section_errc.h
		include/pe_bliss2/section/section_header.h
		include/pe_bliss2/section/section_header_validator.h
		include/pe_bliss2/section/section_search.h
		include/pe_bliss2/section/section_table.h
		include/pe_bliss2/section/section_table_validator.h
		include/pe_bliss2/security/asn1_decode_helper.h
		include/pe_bliss2/security/authenticode_certificate_store.h
		include/pe_bliss2/security/authenticode_check_status.h
		include/pe_bliss2/security/authenticode_format_validator.h
		include/pe_bliss2/security/authenticode_format_validator_errc.h
		include/pe_bliss2/security/authenticode_loader.h
		include/pe_bliss2/security/authenticode_page_hashes.h
		include/pe_bliss2/security/authenticode_pkcs7.h
		include/pe_bliss2/security/authenticode_program_info.h
		include/pe_bliss2/security/authenticode_timestamp_signature.h
		include/pe_bliss2/security/authenticode_timestamp_signature_check_status.h
		include/pe_bliss2/security/authenticode_timestamp_signature_format_validator.h
		include/pe_bliss2/security/authenticode_timestamp_signature_verifier.h
		include/pe_bliss2/security/authenticode_verification_options.h
		include/pe_bliss2/security/authenticode_verifier.h
		include/pe_bliss2/security/buffer_hash.h
		include/pe_bliss2/security/byte_range_types.h
		include/pe_bliss2/security/crypto_algorithms.h
		include/pe_bliss2/security/hash_helpers.h
		include/pe_bliss2/security/image_authenticode_verifier.h
		include/pe_bliss2/security/image_hash.h
		include/pe_bliss2/security/security_directory.h
		include/pe_bliss2/security/security_directory_loader.h
		include/pe_bliss2/security/signature_verifier.h
		include/pe_bliss2/security/pkcs7/attribute_map.h
		include/pe_bliss2/security/pkcs7/message_digest.h
		include/pe_bliss2/security/pkcs7/pkcs7.h
		include/pe_bliss2/security/pkcs7/pkcs7_format_validator.h
		include/pe_bliss2/security/pkcs7/pkcs7_signature.h
		include/pe_bliss2/security/pkcs7/signer_info.h
		include/pe_bliss2/security/x509/x509_certificate.h
		include/pe_bliss2/security/x509/x509_certificate_store.h
		include/pe_bliss2/tls/tls_directory-inl.h
		include/pe_bliss2/tls/tls_directory.h
		include/pe_bliss2/tls/tls_directory_builder.h
		include/pe_bliss2/tls/tls_directory_loader.h
	PRIVATE
		src/address_converter.cpp
		src/error_list.cpp
		src/packed_byte_array.cpp
		src/packed_byte_vector.cpp
		src/packed_c_string.cpp
		src/packed_utf16_string.cpp
		src/bound_import/bound_import_directory_builder.cpp
		src/bound_import/bound_import_directory_loader.cpp
		src/core/data_directories.cpp
		src/core/file_header.cpp
		src/core/image_signature.cpp
		src/core/image_signature_errc.cpp
		src/core/image_signature_validator.cpp
		src/core/optional_header.cpp
		src/core/optional_header_errc.cpp
		src/core/optional_header_validator.cpp
		src/core/overlay.cpp
		src/debug/debug_directory.cpp
		src/debug/debug_directory_loader.cpp
		src/detail/rich/rich_header_utils.cpp
		src/dos/dos_header.cpp
		src/dos/dos_header_errc.cpp
		src/dos/dos_header_validator.cpp
		src/dos/dos_stub.cpp
		src/dotnet/dotnet_directory.cpp
		src/dotnet/dotnet_directory_loader.cpp
		src/exceptions/exception_directory_loader.cpp
		src/exceptions/arm/arm_exception_directory.cpp
		src/exceptions/arm/arm_exception_directory_loader.cpp
		src/exceptions/arm64/arm64_exception_directory.cpp
		src/exceptions/arm64/arm64_exception_directory_loader.cpp
		src/exceptions/arm_common/arm_common_exception_directory_loader.cpp
		src/exceptions/arm_common/arm_common_unwind_info.cpp
		src/exceptions/x64/x64_exception_directory.cpp
		src/exceptions/x64/x64_exception_directory_loader.cpp
		src/exports/exported_address.cpp
		src/exports/export_directory.cpp
		src/exports/export_directory_builder.cpp
		src/exports/export_directory_loader.cpp
		src/image/buffer_to_va.cpp
		src/image/byte_vector_from_va.cpp
		src/image/checksum.cpp
		src/image/format_detector.cpp
		src/image/image.cpp
		src/image/image_builder.cpp
		src/image/image_errc.cpp
		src/image/image_loader.cpp
		src/image/image_section_search.cpp
		src/image/rva_file_offset_converter.cpp
		src/image/section_data_from_va.cpp
		src/image/section_data_length_from_va.cpp
		src/image/shannon_entropy.cpp
		src/image/string_from_va.cpp
		src/image/string_to_va.cpp
		src/imports/import_directory_builder.cpp
		src/imports/import_directory_loader.cpp
		src/load_config/load_config_directory.cpp
		src/load_config/load_config_directory_loader.cpp
		src/relocations/image_rebase.cpp
		src/relocations/relocation_directory_builder.cpp
		src/relocations/relocation_directory_loader.cpp
		src/relocations/relocation_entry.cpp
		src/resources/accelerator_table.cpp
		src/resources/accelerator_table_reader.cpp
		src/resources/bitmap_reader.cpp
		src/resources/bitmap_writer.cpp
		src/resources/cpid.cpp
		src/resources/guid.cpp
		src/resources/icon_cursor_reader.cpp
		src/resources/icon_cursor_writer.cpp
		src/resources/lcid.cpp
		src/resources/manifest.cpp
		src/resources/manifest_accessor_interface.cpp
		src/resources/message_table.cpp
		src/resources/message_table_reader.cpp
		src/resources/pugixml_manifest_accessor.cpp
		src/resources/resource_directory.cpp
		src/resources/resource_directory_loader.cpp
		src/resources/resource_reader.cpp
		src/resources/resource_reader_errc.cpp
		src/resources/string_table.cpp
		src/resources/string_table_reader.cpp
		src/resources/string_table_writer.cpp
		src/resources/version_info.cpp
		src/resources/version_info_reader.cpp
		src/rich/compid_database.cpp
		src/rich/rich_compid.cpp
		src/rich/rich_header.cpp
		src/rich/rich_header_builder.cpp
		src/rich/rich_header_loader.cpp
		src/section/section_data.cpp
		src/section/section_errc.cpp
		src/section/section_header.cpp
		src/section/section_header_validator.cpp
		src/section/section_search.cpp
		src/section/section_table.cpp
		src/section/section_table_validator.cpp
		src/security/authenticode_certificate_store.cpp
		src/security/authenticode_check_status.cpp
		src/security/authenticode_format_validator.cpp
		src/security/authenticode_format_validator_errc.cpp
		src/security/authenticode_loader.cpp
		src/security/authenticode_page_hashes.cpp
		src/security/authenticode_program_info.cpp
		src/security/authenticode_timestamp_signature.cpp
		src/security/authenticode_timestamp_signature_format_validator.cpp
		src/security/crypto_algorithms.cpp
		src/security/hash_helpers.cpp
		src/security/image_authenticode_verifier.cpp
		src/security/image_hash.cpp
		src/security/security_directory_loader.cpp
		src/security/signature_verifier.cpp
		src/security/pkcs7/attribute_map.cpp
		src/security/pkcs7/buffer_hash.cpp
		src/security/pkcs7/pkcs7_format_validator.cpp
		src/security/pkcs7/pkcs7_signature.cpp
		src/security/pkcs7/signer_info.cpp
		src/tls/tls_directory.cpp
		src/tls/tls_directory_builder.cpp
		src/tls/tls_directory_loader.cpp
)

target_link_libraries(pe_bliss2 PUBLIC buffers utilities pugixml SimpleAsn1Lib cryptopp)

if(MSVC)
	target_compile_options(pe_bliss2 PRIVATE "/MP")
	set_source_files_properties(src/security/authenticode_timestamp_signature.cpp PROPERTIES COMPILE_FLAGS /bigobj)
endif()

